# Cpp-Project-Interpreter

./: CMakeLists.txt  Makefile  README.md  add.cpp  add.h  bytecode.cpp  bytecode.h  call.cpp  call.h  cmpe.cpp  cmpe.h  cmpgt.cpp  cmpgt.h  cmplt.cpp  cmplt.h  div.cpp  div.h  fpstack.cpp  fpstack.h  halt.cpp  halt.h  interpreter  interpreter.cpp  interpreter.h  jmp.cpp  jmp.h  jmpc.cpp  jmpc.h  main.cpp  memory.cpp  memory.h  mul.cpp  mul.h  peekc.cpp  peekc.h  peekf.cpp  peekf.h  peeki.cpp  peeki.h  peeks.cpp  (+50 more)
Interpreter/: README.md
Interpreter/Compiler_Generated_Tests/: Peek_Poke.txt  Push_Pop.txt  Subroutines.txt
Interpreter/Outputs/: BasicsOutput.txt  ComparisonsOutput.txt  Interpreter_InputOutput.txt  JumpsOutput.txt  MathOutput.txt  Peek_PokeOutput.txt  Push_PopOutput.txt  SubroutinesOutput.txt
src/: call.h  cmpe.cpp  div.h  fpstack.cpp  halt.h  interpreter.cpp  jmp.cpp  jmp.h  main.cpp  peekc.cpp  peekf.cpp  peeki.h  pokec.h  pokef.cpp  pokes.cpp  popm.cpp  popm.h  printc.cpp  pushc.h  pushf.cpp  pushf.h  pushi.cpp  pushi.h  pushs.cpp  pushs.h  pushvi.cpp  pushvs.cpp  pushvs.h  ret.cpp  runTimeStack.cpp  runTimeStack.h  swp.cpp  swp.h  value.cpp
